<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/teal_700"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:elevation="4dp">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_back"
                app:tint="@color/white"/>

            <TextView
                android:id="@+id/tvHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Quay lại"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="left"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_lab6"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:padding="12dp"
            android:textColor="#000000" />

        <!-- Input + Spinner -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/textbox_hint"
                android:inputType="numberDecimal"/>

            <Spinner
                android:id="@+id/spnUnit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>

        <!-- ===== TABLE RESULT ===== -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <!-- USD -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/usd"
                    android:contentDescription="@string/usd_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usd_unit"
                    android:paddingLeft="10dp" />

                <TextView
                    android:id="@+id/lblUsd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>
            <!--eur-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/eur"
                    android:contentDescription="@string/usd_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eur_unit"
                    android:paddingLeft="10dp" />

                <TextView
                    android:id="@+id/lblEur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>
<!--            GBP-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/gbp"
                    android:contentDescription="@string/gbp_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eur_unit"
                    android:paddingLeft="10dp" />

                <TextView
                    android:id="@+id/lblGbp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>
<!--            AUD-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/aud"
                    android:contentDescription="@string/aud_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aud_unit"
                    android:paddingLeft="10dp" />

                <TextView
                    android:id="@+id/lblAud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>
<!--            CAD-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/cad"
                    android:contentDescription="@string/cad_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cad_unit"
                    android:paddingLeft="10dp" />

                <TextView
                    android:id="@+id/lblCad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>
<!--            ZAR-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/zar"
                    android:contentDescription="@string/zar_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zar_unit"
                    android:paddingLeft="10dp" />

                <TextView
                    android:id="@+id/lblZar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>
<!--            NZD-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/nzd"
                    android:contentDescription="@string/nzd_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nzd_unit"
                    android:paddingLeft="10dp" />

                <TextView
                    android:id="@+id/lblNzd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>
<!--            VND-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/vnd"
                    android:contentDescription="@string/vnd_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vnd_unit"
                    android:paddingLeft="10dp" />

                <TextView
                    android:id="@+id/lblVnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>
<!--            INR-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/inr"
                    android:contentDescription="@string/inr_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inr_unit"
                    android:paddingLeft="10dp" />

                <TextView
                    android:id="@+id/lblInr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>
<!--            JPY-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/jpy"
                    android:contentDescription="@string/jpy_name" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jpy_unit"
                    android:paddingLeft="10dp" />

                <TextView
                    android:id="@+id/lblJpy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>
